; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_node.c_node_is_view.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_node.c_node_is_view.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_node = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@N_CONTAINER = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @node_is_view(%struct.sway_node* %0) #0 {
  %2 = alloca %struct.sway_node*, align 8
  store %struct.sway_node* %0, %struct.sway_node** %2, align 8
  %3 = load %struct.sway_node*, %struct.sway_node** %2, align 8
  %4 = getelementptr inbounds %struct.sway_node, %struct.sway_node* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @N_CONTAINER, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.sway_node*, %struct.sway_node** %2, align 8
  %10 = getelementptr inbounds %struct.sway_node, %struct.sway_node* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br label %15

15:                                               ; preds = %8, %1
  %16 = phi i1 [ false, %1 ], [ %14, %8 ]
  %17 = zext i1 %16 to i32
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
